; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_session.c_fst_session_set_str_llt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_session.c_fst_session_set_str_llt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fst_session = type { i32 }

@FST_MAX_LLT_MS = common dso_local global i64 0, align 8
@MSG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"Cannot set llt %s: Invalid llt value (1..%u expected)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fst_session_set_str_llt(%struct.fst_session* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fst_session*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.fst_session* %0, %struct.fst_session** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i64 @strtol(i8* %8, i8** %6, i32 0)
  store i64 %9, i64* %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %21, label %14

14:                                               ; preds = %2
  %15 = load i64, i64* %7, align 8
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %14
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* @FST_MAX_LLT_MS, align 8
  %20 = icmp ugt i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %17, %14, %2
  %22 = load %struct.fst_session*, %struct.fst_session** %4, align 8
  %23 = load i32, i32* @MSG_WARNING, align 4
  %24 = load i8*, i8** %5, align 8
  %25 = load i64, i64* @FST_MAX_LLT_MS, align 8
  %26 = call i32 @fst_printf_session(%struct.fst_session* %22, i32 %23, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i8* %24, i64 %25)
  store i32 -1, i32* %3, align 4
  br label %32

27:                                               ; preds = %17
  %28 = load %struct.fst_session*, %struct.fst_session** %4, align 8
  %29 = load i64, i64* %7, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @fst_session_set_llt(%struct.fst_session* %28, i32 %30)
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %27, %21
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @fst_printf_session(%struct.fst_session*, i32, i8*, i8*, i64) #1

declare dso_local i32 @fst_session_set_llt(%struct.fst_session*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
